@@ -109,6 +109,7 @@ TESTSUITE_AT = \
  extrac18.at\
  extrac19.at\
  extrac20.at\
+ extrac21.at\
  filerem01.at\
  filerem02.at\
  dirrem01.at\
