@@ -308,6 +308,8 @@ m4_include([extrac17.at])
 m4_include([extrac18.at])
 m4_include([extrac19.at])
 m4_include([extrac20.at])
+m4_include([extrac21.at])
+
 m4_include([backup01.at])
 
 AT_BANNER([Comparing])
